2006-03-15  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.995-6  -- to be released to CRAN

	* data/KNex.rda: replacing 'mm' and 'y' by KNex <- list(mm=mm, y=y)
	* man/KNex.Rd: and other help files
	* tests/*.R: several ones needed adaption
	* inst/doc/Comparisons.Rnw: dito

2006-03-11  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dgCMatrix.R (replCmat): "[<-" methods for dgCMatrix

	* tests/indexing.R: tests for new [<- methods for sparse matrices.

2006-03-10  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dgTMatrix.R (replTmat): "[<-" methods for dgTMatrix

	* R/Tsparse.R (.ind.prep): fix out-of-range indexing

2006-03-08  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dMatrix.R: enable things like  M [ M < 10 ]
	* R/dgeMatrix.R: implement it

2006-03-06  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/AllClass.R: define "summary.mer" and "*.lmer"
	* R/lmer.R (summary): summary(<mer>) computes & returns the above;
	* R/lmer.R (show): now works with summary()

2006-03-04  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dgCMatrix.R: finally direct "Arith"  dgC o dgC
	* R/Auxiliaries.R (WhichintersectInd): and other utilities to
		support the above

2006-02-07  Douglas Bates  <bates@stat.wisc.edu>

	* R/lmer.R (lmer): fix initial values of offset and weights for glm.fit.
	Use glmFit$prior.weights for weights in a glmm.
	Allow an option usePQL = FALSE to skip the PQL steps for the
	Laplace method (and, in time, the AGQ method).

	* src/lmer.c (mer_factor): Move downdating and factoring of XtX
	into a separate function internal_mer_Xfactor to be able to call
	it from internal_bhat.

2006-01-23  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/Class+Meth.R (tstMatrixClass): function for much better
	testing; now again of all actual classes.

	* src/Mutils.c (MAKE_TRIANGULAR_BODY, MAKE_SYMMETRIC_BODY):
		use macros and define make_d_matrix_* and make_i_matrix_*
		where _i_ is for the ldense routines:
